export const TEST_ID = {
  HOME_SCREEN: "home-screen",
  HOME_CAROUSEL: "home-carousel",
  HOME_MAIN_LIST: "home-main-list",
  HORIZONTAL_LIST: "horizontal-list",

  FAVORITE_SCREEN: "favorite-screen",
  TICKETS_SCREEN: "ticket-screen",
  BOOKING_SCREEN: "booking-screen",
  BOOKING_BTN: "booking-button",

  FILM_ITEM: "film-item",
  FAVORITE_BTN: "favorite-button",
  FINISH_BOOK_BTN: "finish-book",

  TAB_BAR_ITEM: "tabbar_item",
  BOOK_BTN: "booking-button",
  SEAT_SELECTION: "seat_selection",
  SEAT: "seat",
  FAVORITE_LIST: "favorite-list",
  TICKETS_LIST: "tickets-list",

  getFilmItemTestId: (id: string) => `film-item-${id}`,
};
